--- a/style.css
+++ b/style.css
@@ -1,3 +1,22 @@
 body {
     background-color: aqua;
 }
+
+button {
+    height: 60px;
+    width: 200px;
+    margin: 5px;
+    margin-top: 10px;
+    font-size: 1.5em;
+    background-color: orange;
+    border: black;
+    color: #fdfdfd;
+    cursor: pointer;
+    float: center;
+  }
+
+h1 {
+    align-items: center;
+    font-size: large;
+    color: red;
+}
