--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-body {
-    background-color: aqua;
-}
-
 button {
     height: 60px;
     width: 200px;
@@ -10,13 +6,18 @@ button {
     font-size: 1.5em;
     background-color: orange;
     border: black;
-    color: #fdfdfd;
+    color: black;
     cursor: pointer;
-    float: center;
   }
-
+  .addbutton {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+  }
 h1 {
     align-items: center;
     font-size: large;
-    color: red;
+    color: blue;
+    margin: auto;
 }
